--- a/dars.2.html
+++ b/dars.2.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="./dars.2.css">
 </head>
 <body>
-    <div class="box">text</div>
+    <br>
+    <br>
+    <br>
+    <div class="box">
+        <center><h1>Google Login</h1></center>
+        <label>Username</label>
+        <br>
+       <center> <input type="text" placeholder="Username"></center>
+        <br>
+        <label>password</label>
+        <br>
+       <center> <input type="password"></center>
+        <br>
+        <!-- <label>male</label>
+        <input type="radio">
+        <label>famele</label>
+        <input type="radio"> -->
+       <a href="./dars.3.html"><button>Login</button></a> 
+    </div>
 </body>
 </html>
